--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
 
         <section id="section2">
-            <h3>Mini-Box, Euphoria Engineering, Xeco Energy, Hookd WiFi, PowerSolutions, iTuner Networks, EaseWeb</h3>
+            <h3>Mini-Box, Euphoria Engineering, Xeco Energy, Hookd WiFi, PowerSolutions, Level 3 Systems, iTuner Networks, ViewPartner, pcEngines, EaseWeb, NexC, Hit Media</h3>
         </section>
 
         <section id="section3">
