Moved from css to scss

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card-header">Atmel AT91 Android
+                            <div class="card__header">Atmel AT91 Android
                                 <div style="float: right;">
                                     <span class="label label-info" style="text-align: right;"><a href="https://github.com/mini-box/picosam9-android-gingerbread-base/tree/master">github</a></i></span>
                                 </div>
                             </div>
 
-                            <div class="card-main">
-                                <div class="main-description">
+                            <div class="card__main">
+                                <div class="card__text">
                                     A complete implementation of a new kernel machine architecture (sam9g43), port of Android for boards based on AT91 MCU along with USB WiFi and Ethernet.
                                     <br> <span class="label label-primary">Kernel, C, Android</span>
 
@@ -99,13 +99,13 @@
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card-header">picoPC
+                            <div class="card__header">picoPC
                                 <div style="float: right;">
                                     <span class="label label-info" style="text-align: right;"><a href="https://arm.mini-box.com" target="new">github</a></i></span>
                                 </div>
                             </div>
-                            <div class="card-main">
-                                <div class="main-description ">Kernel and embedded linux for a custom board design based on ARM MCU.
+                            <div class="card__main">
+                                <div class="card__text ">Kernel and embedded linux for a custom board design based on ARM MCU.
                                     <br><span class="label label-primary">Kernel, C, Angtrom</span>
                                 </div>
                             </div>
@@ -114,9 +114,9 @@
 
                     <div class="col-md-3">
                         <div class="card ">
-                            <div class="card-header">electric Imp</div>
-                            <div class="card-main">
-                                <div class="main-description">
+                            <div class="card__header">electric Imp</div>
+                            <div class="card__main">
+                                <div class="card__text">
                                     IoT Sensor. Low level, from zero sdcard with FAT interface.
                                     <br><span class="label label-primary">RTOS, Squirrel</span>
                                 </div>
@@ -126,9 +126,9 @@
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card-header">picoLCD</div>
-                            <div class="card-main">
-                                <div class="main-description"> A series of USB LCD displays with various resolutions.
+                            <div class="card__header">picoLCD</div>
+                            <div class="card__main">
+                                <div class="card__text"> A series of USB LCD displays with various resolutions.
                                     <br><span class="label label-primary">Microchip, C, Kernel</span>
                                 </div>
                             </div>
@@ -140,9 +140,9 @@
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card-header">Mini-Box UPS</div>
-                            <div class="card-main">
-                                <div class="main-description">
+                            <div class="card__header">Mini-Box UPS</div>
+                            <div class="card__main">
+                                <div class="card__text">
                                     A family of UPS and Power related USB controlled products
 
                                     <br><span class="label label-primary">Microchip, C++</span>
@@ -153,9 +153,9 @@
 
                     <div class="col-md-3">
                         <div class="card ">
-                            <div class="card-header">emlog</div>
-                            <div class="card-main">
-                                <div class="main-description"> Kernel embedded circular logging
+                            <div class="card__header">emlog</div>
+                            <div class="card__main">
+                                <div class="card__text"> Kernel embedded circular logging
                                     <br><span class="label label-primary">Kernel</span>
                                 </div>
                             </div>
@@ -164,9 +164,9 @@
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card-header">pidwatcher</div>
-                            <div class="card-main">
-                                <div class="main-description "> Process watchdog in kernel
+                            <div class="card__header">pidwatcher</div>
+                            <div class="card__main">
+                                <div class="card__text "> Process watchdog in kernel
                                     <br><span class="label label-primary">Kernel</span>
                                 </div>
                             </div>
@@ -175,9 +175,9 @@
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card-header">Spectra8 V4L Driver</div>
-                            <div class="card-main">
-                                <div class="main-description "> Video4Linux 4/8 inputs video capture driver
+                            <div class="card__header">Spectra8 V4L Driver</div>
+                            <div class="card__main">
+                                <div class="card__text "> Video4Linux 4/8 inputs video capture driver
                                     <br><span class="label label-primary">Kernel</span>
                                 </div>
                             </div>
@@ -189,9 +189,9 @@
 
                     <div class="col-md-3">
                         <div class="card ">
-                            <div class="card-header">SiS/671 Geode Xorg</div>
-                            <div class="card-main">
-                                <div class="main-description "> Xorg drivers for these chipsets
+                            <div class="card__header">SiS/671 Geode Xorg</div>
+                            <div class="card__main">
+                                <div class="card__text "> Xorg drivers for these chipsets
                                     <br><span class="label label-primary">Xorg, C</span>
                                 </div>
                             </div>
