--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
     <meta charset="UTF-8">
-
-
     <title>Linux Consulting</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
@@ -15,9 +12,7 @@
 </head>
 
 <body translate="no" data-target="#navbar-example" data-spy="scroll">
-
     <div class="wrapper">
-
         <nav class="nav__wrapper" id="navbar-example">
             <ul class="nav">
 
@@ -71,14 +66,113 @@
         </section>
 
         <section id="section2">
-            <h3>Mini-Box, Euphoria Engineering, Xeco Energy, Hookd WiFi, PowerSolutions, Level 3 Systems, iTuner Networks, ViewPartner, pcEngines, EaseWeb, NexC, Hit Media</h3>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">Mini-Box</div>
+                            <div class="card__main">
+                                <div class="card__text">iMedia Embedded Linux, firmware for hardware devices with USB, BLE, Lora, picoPC ARM board </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">Euphoria Engineering</div>
+                            <div class="card__main">
+                                <div class="card__text">OpenWRT, Yocto, Python, Kernel, C apps, AWS, Azure Cloud on several IoT projects</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">PowerSolutions</div>
+                            <div class="card__main">
+                                <div class="card__text">FPGA development, kernel changes</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">Xeco Energy</div>
+                            <div class="card__main">
+                                <div class="card__text">IoT WiFi Mesh Network, Azure Cloud, python app</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">Hookd WiFi</div>
+                            <div class="card__main">
+                                <div class="card__text">High-Throughput Multipoint WiFi Routers, Azure Cloud devices orchestrator</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">Level 3 Systems</div>
+                            <div class="card__main">
+                                <div class="card__text">Embedded Linux</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">iTuner Networks</div>
+                            <div class="card__main">
+                                <div class="card__text">Audio Video Encoding and Streaming development</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">ViewPartner</div>
+                            <div class="card__main">
+                                <div class="card__text">Video Encoding and Management platform</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">pcEngines</div>
+                            <div class="card__main">
+                                <div class="card__text">Hardware QA suite</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">EaseWeb</div>
+                            <div class="card__main">
+                                <div class="card__text">Streaming platform, Web development</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">NexC</div>
+                            <div class="card__main">
+                                <div class="card__text">Web development</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <div class="card__header">Hit Media</div>
+                            <div class="card__main">
+                                <div class="card__text">Network Management tools, Web development</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         <section id="section3">
 
             <div class="container-fluid">
                 <div class="row equal">
-
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card__header">Atmel AT91 Android
