--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-md-2">
                         <div class="card">
                             <div class="card__header">iTuner Networks</div>
@@ -303,48 +305,110 @@
         </section>
 
         <section id="section4">
-            <h3>blueprint-dynamic-mock, android-tslib, cban, mpeg4joiner, PictureGrabber, Darkice patches, mediapack</h3>
-        </section>
+            <div class="container-fluid">
+                <div class="row">
 
-        <section id="section5">
-            <h3>npavel@linuxconsulting.ro</h3>
-        </section>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card__header">Blueprint Dynamic Mock</div>
+                            <div class="card__main">
+                                <div class="card__text "> Create mock API server from blueprint API specs file
+                                    <br><span class="label label-primary">NodeJS</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-        <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js'></script>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card__header">Android TSLib</div>
+                            <div class="card__main">
+                                <div class="card__text "> Android Touchscreen Calibration and Testing
+                                    <br><span class="label label-primary">C</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-        <script>
-            $('#navbar-example').on('activate.bs.scrollspy', function(e) {
-                var target = e.target.firstElementChild.hash;
-                console.log(target);
-                if (target === '#section3' || target === '#section4') {
-                    $('#logo').css(
-                        'color', 'white'
-                    );
-                } else {
-                    $('#logo').css(
-                        'color', 'black'
-                    );
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card__header">CBAN</div>
+                            <div class="card__main">
+                                <div class="card__text "> Shows current network bandwidth and exports data for usage on RRD or MRTG
+                                    <br><span class="label label-primary">C</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card__header">mpeg4joiner</div>
+                            <div class="card__main">
+                                <div class="card__text "> Join MP4 files without reencoding
+                                    <br><span class="label label-primary">C++</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card__header">PictureGrabber</div>
+                            <div class="card__main">
+                                <div class="card__text "> Video4Linux capture app
+                                    <br><span class="label label-primary">C</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+    </div>
+
+    <!-- <h3>blueprint-dynamic-mock, android-tslib, cban, mpeg4joiner, PictureGrabber, Darkice patches, mediapack</h3> -->
+    </section>
+
+    <section id="section5">
+        <h3>npavel@linuxconsulting.ro</h3>
+    </section>
+
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js'></script>
+
+    <script>
+        $('#navbar-example').on('activate.bs.scrollspy', function(e) {
+            var target = e.target.firstElementChild.hash;
+            console.log(target);
+            if (target === '#section3' || target === '#section4') {
+                $('#logo').css(
+                    'color', 'white'
+                );
+            } else {
+                $('#logo').css(
+                    'color', 'black'
+                );
+            }
+
+        })
+        $('a[href*=#]:not([href=#])').click(function() {
+            if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') ||
+                location.hostname == this.hostname) {
+
+                var target = $(this.hash);
+
+                target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+                if (target.length) {
+                    $('html,body').animate({
+                            scrollTop: target.offset().top
+                        },
+                        1000);
+                    return false;
                 }
-
-            })
-            $('a[href*=#]:not([href=#])').click(function() {
-                if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') ||
-                    location.hostname == this.hostname) {
-
-                    var target = $(this.hash);
-
-                    target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
-                    if (target.length) {
-                        $('html,body').animate({
-                                scrollTop: target.offset().top
-                            },
-                            1000);
-                        return false;
-                    }
-                }
-            });
-        </script>
+            }
+        });
+    </script>
 </body>
 
 </html>
