--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="card">
                             <div class="card__header">iTuner Networks</div>
                             <div class="card__main">
-                                <div class="card__text">Audio Video Encoding and Streaming development</div>
+                                <div class="card__text">MediaBox: Audio Video Encoding and Streaming platform</div>
                             </div>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         <div class="card">
                             <div class="card__header">ViewPartner</div>
                             <div class="card__main">
-                                <div class="card__text">Video Encoding and Management platform</div>
+                                <div class="card__text">EZTV: Video Encoding and Management platform</div>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                         <div class="card">
                             <div class="card__header">pcEngines</div>
                             <div class="card__main">
-                                <div class="card__text">Hardware QA suite</div>
+                                <div class="card__text">Alix: Hardware QA suite</div>
                             </div>
                         </div>
                     </div>
@@ -343,10 +343,21 @@
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card__header">mpeg4joiner</div>
+                            <div class="card__header">mp4join</div>
                             <div class="card__main">
-                                <div class="card__text "> Join MP4 files without reencoding
+                                <div class="card__text "> Join MP4 files without reencoding. GUI and console version.
                                     <br><span class="label label-primary">C++</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card__header"><a href="https://github.com/nicupavel/picoDesk">picoDesk</a></div>
+                            <div class="card__main">
+                                <div class="card__text "> Send selected applications windows to a USB LCD.
+                                    <br><span class="label label-primary">C</span>
                                 </div>
                             </div>
                         </div>
