--- a/index.html
+++ b/index.html
@@ -62,7 +62,26 @@
         </nav>
 
         <section id="section1">
-            <h3>RainMachine, iStreamBox, smoothIoT, Panzer Marshal</h3>
+            <!-- <h3>RainMachine, iStreamBox, smoothIoT, Panzer Marshal</h3> -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-3">
+                        <a href="https://rainmachine.com" target="new"><img src="assets/clients/rainmachine.png" style="width: 100%;"></a>
+                    </div>
+
+                    <div class="col-md-3">
+                        <a href="http://istreambox.com" target="new"><img src="assets/clients/istreambox.png" style="width: 90%;"></a>
+                    </div>
+
+                    <div class="col-md-3">
+                        <a href="https://smoothiot.com" target="new"><img src="assets/clients/smoothiot.png" style="width: 80%;"></a>
+                    </div>
+
+                    <div class="col-md-3">
+                        <a href="http://panzermarshal.com" target="new"><img src="assets/clients/panzermarshal.png" style="width: 80%;"></a>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="section2">
@@ -177,10 +196,8 @@
                 <div class="row equal">
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card__header">Atmel AT91 Android
-                                <div style="float: right;">
-                                    <span class="label label-info" style="text-align: right;"><a href="https://github.com/mini-box/picosam9-android-gingerbread-base/tree/master">github</a></i></span>
-                                </div>
+                            <div class="card__header">
+                                <a href="https://github.com/mini-box/picosam9-android-gingerbread-base/tree/master" target="new">Atmel AT91 Android</a>
                             </div>
 
                             <div class="card__main">
@@ -195,10 +212,8 @@
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card__header">picoPC
-                                <div style="float: right;">
-                                    <span class="label label-info" style="text-align: right;"><a href="https://arm.mini-box.com" target="new">github</a></i></span>
-                                </div>
+                            <div class="card__header">
+                                <a href="https://arm.mini-box.com" target="new">picoPC</a>
                             </div>
                             <div class="card__main">
                                 <div class="card__text ">Kernel and embedded linux for a custom board design based on ARM MCU.
