--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="card">
                             <div class="card__header">Xeco Energy</div>
                             <div class="card__main">
-                                <div class="card__text">IoT WiFi Mesh Network, Azure Cloud, python app</div>
+                                <div class="card__text">IoT WiFi Mesh Network, MQTT, AWS IoT, Python app</div>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         <div class="card">
                             <div class="card__header">pcEngines</div>
                             <div class="card__main">
-                                <div class="card__text">Alix: Hardware QA suite</div>
+                                <div class="card__text">Alix: Embedded boards QA suite</div>
                             </div>
                         </div>
                     </div>
@@ -438,7 +438,7 @@
                 to keep things as simple as possible, but keeping in mind that things needs to <b>scale</b>, be <b>tolerant with failures</b> and <b>maintainable</b>.
                 <br>
                 <br>
-                <div style="float: right; padding-right: 50px;"><a href="mailto:office@linuxconsuling.ro">office@linuxconsulting.ro</div>
+                <div style="float: right; padding-right: 50px;"><a href="mailto:office@linuxconsulting.ro">office@linuxconsulting.ro</div>
             </h3>
         </section>
 
